--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.splash.SplashActivity"
-    android:background="@color/colorPrimaryDark"
+    android:background="@color/secCardColor"
     >
 
     <com.airbnb.lottie.LottieAnimationView
