--- a/app/src/main/res/menu/bottom_appbar_menu.xml
+++ b/app/src/main/res/menu/bottom_appbar_menu.xml
@@ -6,18 +6,27 @@
         android:id="@+id/homeFragment"
         android:title="Home"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_home_white"
-        app:iconTint="@android:color/white"
+        android:icon="@drawable/ic_bottomnav_home"
+        app:iconTint="@android:color/black"
         android:orderInCategory="1"
         />
+
 
 
     <item
         android:id="@+id/categoriesFragment"
         android:title="Categories"
         app:showAsAction="ifRoom"
-        android:icon="@drawable/ic_categ_white"
+        android:icon="@drawable/ic_bottomnav_category"
         app:iconTint="@android:color/white"
-        android:orderInCategory="2"
+        android:orderInCategory="3"
+        />
+
+    <item
+        android:id="@+id/aboutFragment"
+        android:icon="@drawable/ic_bottomnav_info"
+        android:title="@string/title_about"
+        app:showAsAction="ifRoom"
+        android:orderInCategory="4"
         />
 </menu>
