--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -12,6 +12,18 @@
 
     </style>
 
+    <style name="AppTheme.statusBarTransparent" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#BB86FC</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="elevationOverlayEnabled">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
+
 
     <style name="CategoryStyles">
 
