--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:tabMode="fixed"
+            android:elevation="4dp"
+            app:tabIndicatorHeight="4dp"
+            app:tabIndicatorColor="@android:color/white"
+            app:tabSelectedTextColor="@android:color/white"
+            app:tabTextColor="@android:color/white"
+            android:backgroundTint="@color/secCardColor"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -42,9 +48,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:src="@drawable/ic_add_white"
-            android:backgroundTint="#15AE5C"
-            android:layout_marginBottom="40dp"
-            android:layout_marginRight="18dp"
+            android:backgroundTint="@color/chipBGColor"
+            android:layout_marginBottom="34dp"
+            android:layout_marginRight="24dp"
             app:tint="@color/mainBackGroundColor"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintBottom_toBottomOf="parent"
