--- a/app/src/main/res/layout/fragment_memories_tab.xml
+++ b/app/src/main/res/layout/fragment_memories_tab.xml
@@ -25,7 +25,7 @@
             android:id="@+id/emptyAnimation"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:visibility="gone"
+            android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintDimensionRatio="1:1"
             app:layout_constraintEnd_toEndOf="parent"
