--- a/app/src/main/res/values-night-v23/styles.xml
+++ b/app/src/main/res/values-night-v23/styles.xml
@@ -4,13 +4,24 @@
     <style name="AppTheme" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#BB86FC</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorPrimaryDark">@color/statusbarcolor</item>
         <item name="colorAccent">@color/colorAccent</item>
         <item name="android:textColorSecondary">@android:color/white</item>
         <item name="android:windowLightStatusBar">false</item>
-
-        <item name="android:statusBarColor">@android:color/black</item>
         <item name="elevationOverlayEnabled">true</item>
+        <item name="android:statusBarColor">@color/statusbarcolor</item>
 
     </style>
+
+    <style name="AppTheme.statusBarTransparent" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <!-- Customize your theme here. -->
+        <item name="colorPrimary">#BB86FC</item>
+        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
+        <item name="colorAccent">@color/colorAccent</item>
+        <item name="android:textColorSecondary">@android:color/black</item>
+        <item name="android:statusBarColor">@android:color/black</item>
+        <item name="elevationOverlayEnabled">true</item>
+        <item name="android:windowTranslucentStatus">true</item>
+    </style>
+
 </resources>
