--- a/app/src/main/res/layout/activity_detailed_bucket.xml
+++ b/app/src/main/res/layout/activity_detailed_bucket.xml
@@ -5,91 +5,297 @@
 
     <data>
 
-        <variable
-            name="viewModel"
-            type="com.harish.dreambuckets.viewmodels.BucketListViewModel" />
-
     </data>
 
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/Coordinatorlayout"
+    <ScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:fitsSystemWindows="true">
+        android:fillViewport="true">
 
-
-        <com.google.android.material.appbar.AppBarLayout
-            android:id="@+id/mainAppBar"
-            android:layout_width="match_parent"
-            android:layout_height="270dp"
-            android:fitsSystemWindows="true">
-
-            <com.google.android.material.appbar.CollapsingToolbarLayout
-                android:id="@+id/collapsingtoolbar"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
-                app:collapsedTitleTextAppearance="@style/shrinkedTextAppearance"
-                app:contentScrim="@color/toolbarColor"
-                app:expandedTitleMarginEnd="68dp"
-                app:expandedTitleMarginStart="24dp"
-                app:expandedTitleTextAppearance="@style/expandedTitleTextAppearance"
-                app:layout_scrollFlags="scroll|exitUntilCollapsed"
-                app:scrimAnimationDuration="500"
-                app:statusBarScrim="@color/toolbarColorCommon"
-                app:title="@string/add_activity_title"
-                app:titleEnabled="true">
-
-                <ImageView
-                    android:id="@+id/imageView"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:fitsSystemWindows="true"
-                    android:scaleType="centerCrop"
-                    android:src="@drawable/marssunset"
-                    app:layout_collapseMode="parallax"
-                    app:layout_constraintBottom_toBottomOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" />
-
-                <!-- android:backgroundTint="@color/textColor"-->
-                <com.google.android.material.appbar.MaterialToolbar
-                    android:id="@+id/toolbar"
-                    android:layout_width="match_parent"
-                    android:layout_height="?attr/actionBarSize"
-                    android:background="@android:color/transparent"
-                    app:layout_collapseMode="pin"
-                    app:popupTheme="@style/ThemeOverlay.MaterialComponents.Light" />
-
-
-            </com.google.android.material.appbar.CollapsingToolbarLayout>
-
-        </com.google.android.material.appbar.AppBarLayout>
-
-
-        <androidx.core.widget.NestedScrollView
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            app:layout_behavior="@string/appbar_scrolling_view_behavior">
+            android:orientation="vertical">
 
-        </androidx.core.widget.NestedScrollView>
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:id="@+id/rootConstraintLayout"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/toolbarColorCommon">
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/addPhotoFAB"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:backgroundTint="@color/chipBGColor"
-            android:text="Add Photo"
-            android:textColor="@android:color/white"
-            android:src="@drawable/ic_add_white"
-            app:tint="@color/mainBackGroundColor"
-            app:elevation="8dp"
-            app:layout_anchor="@id/mainAppBar"
-            app:layout_anchorGravity="bottom|end"
-            />
+            <ImageView
+                android:id="@+id/backButtonImageView"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="18dp"
+                android:src="@drawable/ic_back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
+
+            <com.google.android.material.card.MaterialCardView
+                android:id="@+id/rootCardView"
+                android:layout_width="320dp"
+                android:layout_height="300dp"
+                app:cardCornerRadius="40dp"
+                app:cardElevation="80dp"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toBottomOf="@id/guideline">
+
+                <androidx.cardview.widget.CardView
+                    android:id="@+id/cardImage"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:padding="1dp">
+
+                    <ImageView
+                        android:id="@+id/cardImageView"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:scaleType="centerCrop"
+                        android:src="@drawable/marssunset" />
+
+                </androidx.cardview.widget.CardView>
+
+            </com.google.android.material.card.MaterialCardView>
+
+
+            <TextView
+                android:id="@+id/titleTextView"
+                style="@style/detailedTextView"
+                android:layout_marginTop="14dp"
+                android:text="Harish is a good"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline4"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/rootCardView" />
+
+            <TextView
+                android:id="@+id/levelTextView"
+                style="@style/detailedTextView"
+                android:layout_width="wrap_content"
+                android:layout_marginTop="32dp"
+                android:text="Level"
+                android:drawableTop="@drawable/ic_dreamlevel_add_activity"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                android:textColor="@color/chipBGColor"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/levelTextView2"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toBottomOf="@+id/titleTextView" />
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cardColorView"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_margin="@dimen/largeMargin"
+                app:cardCornerRadius="128dp"
+                app:layout_constraintBottom_toTopOf="@+id/guideline7"
+                app:layout_constraintEnd_toEndOf="@+id/levelTextView"
+                app:layout_constraintStart_toStartOf="@+id/levelTextView"
+                app:layout_constraintTop_toBottomOf="@+id/guideline4">
+
+                <ImageView
+                    android:id="@+id/cardColorImageView"
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:scaleType="centerCrop"
+                    android:src="@color/colorAccent" />
+
+            </androidx.cardview.widget.CardView>
+
+
+            <TextView
+                android:id="@+id/levelTextView2"
+                style="@style/detailedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Target Date"
+                android:textColor="@color/chipBGColor"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:drawableTop="@drawable/ic_targetdate_add_activtiy"
+                app:layout_constraintBottom_toBottomOf="@+id/levelTextView"
+                app:layout_constraintEnd_toStartOf="@+id/levelTextView3"
+                app:layout_constraintHorizontal_bias="0.5"
+                app:layout_constraintStart_toEndOf="@+id/levelTextView"
+                app:layout_constraintTop_toTopOf="@+id/levelTextView"
+                app:layout_constraintVertical_bias="1.0" />
+
+
+            <TextView
+                android:id="@+id/targetDateAnsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="12/02/2000"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/guideline7"
+                app:layout_constraintEnd_toEndOf="@+id/levelTextView2"
+                app:layout_constraintStart_toStartOf="@id/levelTextView2"
+                app:layout_constraintTop_toTopOf="@+id/guideline4" />
+
+
+            <TextView
+                android:id="@+id/levelTextView3"
+                style="@style/detailedTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Category"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
+                android:textColor="@color/chipBGColor"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                android:drawableTop="@drawable/ic_categories_add_activity"
+                app:layout_constraintBottom_toBottomOf="@+id/levelTextView2"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintStart_toEndOf="@+id/levelTextView2"
+                app:layout_constraintTop_toTopOf="@+id/levelTextView2"
+                app:layout_constraintVertical_bias="1.0" />
+
+
+            <TextView
+                android:id="@+id/categoryAnsTextView"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="Travel"
+                android:textSize="15sp"
+                android:textStyle="bold"
+                app:layout_constraintBottom_toTopOf="@+id/guideline7"
+                app:layout_constraintEnd_toEndOf="@+id/levelTextView3"
+                app:layout_constraintStart_toStartOf="@id/levelTextView3"
+                app:layout_constraintTop_toTopOf="@+id/guideline4" />
+
+
+            <TextView
+                android:id="@+id/thoughtsTextView"
+                style="@style/detailedTextView"
+                android:layout_width="0dp"
+                android:layout_marginTop="20dp"
+                android:gravity="center"
+                android:text="Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s"
+                android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
+                app:layout_constraintEnd_toStartOf="@id/guideline3"
+                app:layout_constraintHorizontal_bias="0.0"
+                app:layout_constraintStart_toEndOf="@id/guideline2"
+                app:layout_constraintTop_toTopOf="@+id/guideline7" />
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/editMaterialButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:fontFamily="@font/muli"
+                android:text="Edit"
+                android:drawableLeft="@drawable/ic_edit"
+                android:backgroundTint="#3459E6"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toTopOf="@+id/guideline8"
+                app:layout_constraintVertical_bias="0" />
+
+
+            <View
+                android:id="@+id/viewSeperator"
+                android:layout_width="2dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="32dp"
+                android:background="@color/seperatorLineColor"
+                app:layout_constraintBottom_toBottomOf="@+id/cardColorView"
+                app:layout_constraintStart_toEndOf="@id/levelTextView"
+                app:layout_constraintTop_toTopOf="@id/levelTextView" />
+
+
+            <View
+                android:id="@+id/viewSeperator2"
+                android:layout_width="2dp"
+                android:layout_height="0dp"
+                android:layout_marginStart="32dp"
+                android:background="@color/seperatorLineColor"
+                app:layout_constraintBottom_toBottomOf="@+id/cardColorView"
+                app:layout_constraintStart_toEndOf="@id/levelTextView2"
+                app:layout_constraintTop_toTopOf="@id/levelTextView" />
+
+
+
+            <com.google.android.material.button.MaterialButton
+                android:id="@+id/accompolishMaterialButton"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="12dp"
+                android:layout_marginBottom="12dp"
+                android:fontFamily="@font/muli"
+                android:text="Accompolished"
+                android:drawableLeft="@drawable/ic_check"
+                android:textColor="@android:color/white"
+                android:textStyle="bold"
+                app:layout_constraintEnd_toStartOf="@+id/guideline3"
+                app:layout_constraintStart_toStartOf="@+id/guideline2"
+                app:layout_constraintTop_toBottomOf="@+id/editMaterialButton"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintVertical_bias="0" />
+
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="32dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="54dp"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_begin="36dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline3"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical"
+                app:layout_constraintGuide_end="36dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline4"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="16dp"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_end="263dp"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_end="234dp" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline8"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                app:layout_constraintGuide_begin="632dp" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        </LinearLayout>
+
+    </ScrollView>
 
 </layout>
