--- a/app/src/main/res/layout/container_home_display.xml
+++ b/app/src/main/res/layout/container_home_display.xml
@@ -15,15 +15,17 @@
         android:layout_marginEnd="6dp"
         android:layout_marginTop="8dp"
         android:layout_marginBottom="8dp"
-        app:cardElevation="4dp"
+        app:cardElevation="14dp"
         android:clickable="true"
-        app:cardCornerRadius="5dp">
+        app:cardCornerRadius="17dp">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/cardBgColorHome"
-            android:padding="18dp"
+            android:paddingTop="12dp"
+            android:paddingBottom="12dp"
+            android:paddingRight="12dp"
             >
 
             <androidx.constraintlayout.widget.Guideline
@@ -31,33 +33,32 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                app:layout_constraintGuide_begin="146dp" />
+                app:layout_constraintGuide_end="237dp" />
 
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardColorView"
                 android:layout_width="0dp"
                 android:layout_height="0dp"
-                app:cardCornerRadius="15dp"
-                android:layout_marginRight="10dp"
-                android:padding="28dp"
-                app:layout_constraintRight_toLeftOf="@id/guideline"
-                app:layout_constraintBottom_toBottomOf="parent"
+                android:layout_marginRight="20dp"
+                app:cardElevation="6dp"
+                app:cardCornerRadius="60dp"
+                app:layout_constraintHorizontal_bias="0"
                 app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/guideline"
                 app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
                 >
 
                 <ImageView
-                    android:id="@+id/bucketsImageView"
+                    android:id="@+id/cardColorImageView"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
-                    android:src="@mipmap/ic_bucket_icon"
-                     />
-
+                    android:scaleType="centerCrop"
+                    tools:src="@color/colorAccent"
+                    />
 
             </androidx.cardview.widget.CardView>
-
-
 
 
 
@@ -106,19 +107,6 @@
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
-        <View
-            android:id="@+id/view"
-            android:layout_width="10dp"
-            android:layout_height="match_parent"
-            android:layout_margin="0dp"
-            android:padding="0dp"
-            android:background="@color/colorAccent"
-            android:layout_gravity="end"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
-
 
 
     </com.google.android.material.card.MaterialCardView>
