--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -13,6 +13,10 @@
 
     </style>
 
+    <style name="AppTheme.detailedActivity">
+        <item name="android:statusBarColor">@android:color/black</item>
+    </style>
+
     <style name="AppTheme.statusBarTransparent" parent="Theme.MaterialComponents.DayNight.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="colorPrimary">#BB86FC</item>
