Added ViewModels Added ViewModelFactories Added InjectorUtils.kt Added Constants.kt Added Utils.kt

--- a/app/src/main/res/layout/activity_bucket_add.xml
+++ b/app/src/main/res/layout/activity_bucket_add.xml
@@ -8,7 +8,7 @@
 
         <variable
             name="viewModel"
-            type="com.harish.dreambuckets.viewmodels.BucketListViewModel" />
+            type="com.harish.dreambuckets.viewmodels.BucketAddActivityViewModel" />
 
     </data>
 
