--- a/app/src/main/res/navigation/navigation.xml
+++ b/app/src/main/res/navigation/navigation.xml
@@ -48,16 +48,16 @@
     </fragment>
     <fragment
         android:id="@+id/aboutFragment"
-        android:name="com.harish.dreambuckets.ui.about.AboutFragment"
+        android:name="com.harish.dreambuckets.ui.DashFragments.AboutFragment"
         android:label="AboutFragment"
         tools:layout="@layout/fragment_about"
         />
     <fragment
         android:id="@+id/dreamsTab"
-        android:name="com.harish.dreambuckets.ui.tabs.DreamsTab"
+        android:name="com.harish.dreambuckets.ui.tabs.DreamsTabFragment"
         android:label="DreamsTab" />
     <fragment
         android:id="@+id/memoriesTab"
-        android:name="com.harish.dreambuckets.ui.tabs.MemoriesTab"
+        android:name="com.harish.dreambuckets.ui.tabs.MemoriesTabFragment"
         android:label="MemoriesTab" />
 </navigation>
